Maven dependencies updated, again.